--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,28 @@
+sudo: true
+dist: trusty
+
 language: python
+
+os:
+    - linux
+
+cache:
+    apt: true
+    directories:
+        - $HOME/.cache/pip
+
+addons:
+    apt:
+        packages:
+            - libatlas-dev
+            - libblas-dev
+            - liblapack-dev
+            - gfortran
+            - python-numpy
+            - python-scipy
+            - python3-numpy
+            - python3-scipy
+
 python:
   - "2.7"
 install: "pip install -r requirements.txt"
